--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,7 +5,7 @@
         </h3>
     </div>
     <div class="card-body">
-        <form action="/images" method="POST">
+        <form action="/images" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Choose File" readonly>
