--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,37 +1,77 @@
 <div class="card">
-    <div class="card-header bg-dark">
-        <h3 class="card-title text-white">
-            <i class="far fa-image"></i>  UPLOAD IMAGE
-        </h3>
+  <div class="card-header bg-dark">
+    <h3 class="card-title text-white">
+      <i class="far fa-image"></i>
+      UPLOAD IMAGE
+    </h3>
+  </div>
+  <div class="card-body">
+    <form action="/images" method="POST" enctype="multipart/form-data">
+      <div class="form-group">
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Choose File"
+            readonly
+          />
+          <label class="input-group-btn">
+            <span class="btn btn-primary">
+              <i class="glyphicon glyphicon-folder-open"></i>
+              Browse
+              <input type="file" name="image" style="display: none;" required />
+            </span>
+          </label>
+        </div>
+      </div>
+
+      <div class="form-group mb-3">
+        <input
+          type="text"
+          name="title"
+          class="form-control"
+          placeholder="Title for the image"
+          required
+        />
+      </div>
+
+      <div class="form-group mb-3">
+        <textarea
+          name="description"
+          rows="2"
+          class="form-control"
+          placeholder="Description for the image"
+          required
+        ></textarea>
+      </div>
+
+      <div class="form-group">
+        <button class="btn btn-success">
+          <i class="fa fa-upload"></i>Upload Image
+        </button>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+<div class="card mt-2">
+  <div class="card-header bg-dark text-white">
+    <h3><i class="far fa-images"></i> Uploads</h3>
+  </div>
+  <div class="card-body">
+    <div class="row">
+        {{#each images}}
+            <div class="col-md-4 text-center">
+            <a href="/images/{{uniqueId}}">
+                <img
+                    src="/public/upload/{{filename}}"
+                    alt="{{title}}"
+                    class="w-100 h-100 img-thumbnail"
+                />
+            </a>
+            </div>
+        {{/each}}
     </div>
-    <div class="card-body">
-        <form action="/images" method="POST" enctype="multipart/form-data">
-            <div class="form-group">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Choose File" readonly>
-                    <label class="input-group-btn">
-                        <span class="btn btn-primary">
-                            <i class="glyphicon glyphicon-folder-open"></i> Browse
-                            <input type="file" name="image" style="display: none;" required>
-                        </span>
-                    </label>
-                </div>
-            </div>
-
-            <div class="form-group  mb-3">
-                <input type="text" name="title" class="form-control" placeholder="Title for the image" required>
-            </div>
-
-            <div class="form-group mb-3 ">
-                <textarea name="description" rows="2" class="form-control" placeholder="Description for the image" required></textarea>
-            </div>
-            
-            <div class="form-group">
-                <button class="btn btn-success">
-                    <i class="fa fa-upload"></i>Upload Image
-                </button>
-            </div>
-
-        </form>
-    </div>
+  </div>
 </div>
