--- a/src/views/image.hbs
+++ b/src/views/image.hbs
@@ -33,3 +33,32 @@
     
   </div>
 </div>
+
+<div class="card mt-2">
+  <div class="card-header d-flex justify-content-between align-items-center">
+    <h3>Comments</h3>
+    <button class="btn btn-info" id="btn-toggle-comment">
+      <i class="fa fa-comment-o"></i> Post a Comment
+    </button>
+  </div>
+  <div class="card-body">
+    <blockquote>
+      <form action="/images/{{image.uniqueId}}/comment" method="POST">
+        <div class="mb-3">
+          <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+        </div>
+        <div class="mb-3">
+          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+        </div>
+        <div class="mb-3">
+          <textarea class="form-control" id="comment" name="comment" rows="2" placeholder="Enter your comment"></textarea>
+        </div >
+        <div class="mb-3">
+          <button class="btn btn-success" id="btn-comment">
+            <i class="fa fa-comment"></i>  Post
+          </button>
+        </div>
+      </form>
+    </blockquote>
+  </div>
+</div>
