--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -14,12 +14,13 @@
             class="form-control"
             placeholder="Choose File"
             readonly
+            id="selectedFileName"
           />
           <label class="input-group-btn">
             <span class="btn btn-primary">
               <i class="glyphicon glyphicon-folder-open"></i>
               Browse
-              <input type="file" name="image" style="display: none;" required />
+              <input type="file" name="image" style="display: none;" onchange="document.getElementById('selectedFileName').value = this.files[0].name" required />
             </span>
           </label>
         </div>
