Actualizar vistas , likes y eliminar post

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -33,5 +33,9 @@
             </div>
         </div>
     </div>
+    <!-- JAVA SCRIPT -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <!--CUSTOM CODE -->
+    <script src="/public/js/scripts.js"></script>
 </body>
 </html>
