--- a/src/views/image.hbs
+++ b/src/views/image.hbs
@@ -18,19 +18,22 @@
   </div>
   <div class="card-footer d-flex justify-content-between align-items-center">
     <button class="btn btn-success" id="btn-like" data-id="{{image.filename}}">
-        <i class="fas fa-thumbs-up"></i> Like
+      <i class="fas fa-thumbs-up"></i>
+      Like
     </button>
     <p>
-        <span class="likes-count">  {{image.likes}}</span>
-        <i class="fas fa-heart"></i>
+      <span class="likes-count"> {{image.likes}}</span>
+      <i class="fas fa-heart"></i>
     </p>
     <p>
-        <i class="fas fa-eye"></i>  {{image.views}}
+      <i class="fas fa-eye"></i>
+      {{image.views}}
     </p>
     <p>
-        <i class="far fa-clock"></i>  {{timeago image.timestamp}}
+      <i class="far fa-clock"></i>
+      {{timeago image.timestamp}}
     </p>
-    
+
   </div>
 </div>
 
@@ -38,24 +41,44 @@
   <div class="card-header d-flex justify-content-between align-items-center">
     <h3>Comments</h3>
     <button class="btn btn-info" id="btn-toggle-comment">
-      <i class="fa fa-comment-o"></i> Post a Comment
+      <i class="fa fa-comment-o"></i>
+      Post a Comment
     </button>
   </div>
   <div class="card-body">
-    <blockquote>
+    <blockquote id="post-comment">
       <form action="/images/{{image.uniqueId}}/comment" method="POST">
         <div class="mb-3">
-          <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            name="name"
+            placeholder="Name"
+          />
         </div>
         <div class="mb-3">
-          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+          <input
+            type="text"
+            class="form-control"
+            id="email"
+            name="email"
+            placeholder="Email"
+          />
         </div>
         <div class="mb-3">
-          <textarea class="form-control" id="comment" name="comment" rows="2" placeholder="Enter your comment"></textarea>
-        </div >
+          <textarea
+            class="form-control"
+            id="comment"
+            name="comment"
+            rows="2"
+            placeholder="Enter your comment"
+          ></textarea>
+        </div>
         <div class="mb-3">
           <button class="btn btn-success" id="btn-comment">
-            <i class="fa fa-comment"></i>  Post
+            <i class="fa fa-comment"></i>
+            Post
           </button>
         </div>
       </form>
@@ -65,10 +88,13 @@
         <li class="list-group-item">
           <div class="row">
             <a href="#" class="col text-center">
-              <img src="http://gravatar.com/avatar/{{gravatar}}?d=monsterid&s=45" alt="">
+              <img
+                src="http://gravatar.com/avatar/{{gravatar}}?d=monsterid&s=45"
+                alt=""
+              />
             </a>
             <blockquote class="col">
-              <p class="lead">{{comment}}<br></p>
+              <p class="lead">{{comment}}<br /></p>
               <footer class="blockquote-footer">
                 {{name}}-{{timeago timestamp}}
               </footer>
