--- a/src/views/partials/stats.hbs
+++ b/src/views/partials/stats.hbs
@@ -1,12 +1,17 @@
-<div class="card mb-2">
+<div class="card mb-4">
     <div class="card-header bg-dark text-white">
-        <h5><i class="far fa-chart-bar"></i> Status</h5>
+        <h5><i class="far fa-chart-bar"></i> Estado</h5>
     </div>
     <div class="card-body">
-        <p><i class="fas fa-images"></i>  Images : {{sidebar.stats.images}}</p>
-        <p><i class="fas fa-comments"></i>  Comments : {{sidebar.stats.comments}}</p>
-        <p><i class="fas fa-eye"></i>  Views : {{sidebar.stats.views}}</p>
-        <p><i class="fas fa-heart"></i>  Likes : {{sidebar.stats.likes}}</p>
-
+        <div class="row">
+            <div class="col-md-6">
+                <p><i class="fas fa-images"></i>  Imágenes: {{sidebar.stats.images}}</p>
+                <p><i class="fas fa-comments"></i>  Comentarios: {{sidebar.stats.comments}}</p>
+            </div>
+            <div class="col-md-6">
+                <p><i class="fas fa-eye"></i>  Vistas: {{sidebar.stats.views}}</p>
+                <p><i class="fas fa-heart"></i>  Likes: {{sidebar.stats.likes}}</p>
+            </div>
+        </div>
     </div>
 </div>
