Agregar Funcion Compartir , genera un url y lo copia en portapapeles

--- a/src/views/image.hbs
+++ b/src/views/image.hbs
@@ -21,6 +21,12 @@
       <i class="fas fa-thumbs-up"></i>
       Like
     </button>
+    <button class="btn btn-primary" id="btn-compartir">
+      <i class="fas fa-share"></i>
+      Compartir
+    </button>
+    <span id="enlace-compartido" style="display: none;">{{sharedLink}}</span>
+    
     <p>
       <span class="likes-count"> {{image.likes}}</span>
       <i class="fas fa-heart"></i>
